{
  "version": 4,
  "terraform_version": "1.8.3",
  "serial": 1949,
  "lineage": "e9ea8121-4c9c-d82f-3b63-71bc383de03d",
  "resources": [
    {
      "module": "module.alb_workload_internet_facing",
      "mode": "managed",
      "type": "aws_lb",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:890942158228:loadbalancer/app/selin-tf-alb/d2e71f864e22026b",
            "arn_suffix": "app/selin-tf-alb/d2e71f864e22026b",
            "desync_mitigation_mode": "defensive",
            "dns_name": "selin-tf-alb-402332159.ap-southeast-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:890942158228:loadbalancer/app/selin-tf-alb/d2e71f864e22026b",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "dualstack",
            "load_balancer_type": "application",
            "name": "selin-tf-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-064925d2cc5d9db10",
              "sg-076f38df9f846e692"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-08309d02a04101db1"
              },
              {
                "subnet_id": "subnet-0db76712a7a1bb426"
              }
            ],
            "subnets": [
              "subnet-08309d02a04101db1",
              "subnet-0db76712a7a1bb426"
            ],
            "tags_all": {
              "CmBillingGroup": "OTHER",
              "CodedResource": "true",
              "Environment": "playground",
              "IaC": "local",
              "Service": "selin-tf"
            },
            "vpc_id": "vpc-01bf300ba725825a0",
            "xff_header_processing_mode": "append",
            "zone_id": "Z1LMS91P8CMLE5"
          },
          "dependencies": [
            "data.aws_caller_identity.current",
            "module.alb_workload_internet_facing.aws_s3_bucket.alb_access_log",
            "module.vpc_workload.aws_security_group.ec2_bastion",
            "module.vpc_workload.aws_security_group.public_subnet_group",
            "module.vpc_workload.aws_security_group.publish_internet",
            "module.vpc_workload.aws_subnet.public",
            "module.vpc_workload.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.alb_workload_internet_facing",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "port_443",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:890942158228:listener/app/selin-tf-alb/d2e71f864e22026b/3e1b1338597b3b23",
            "certificate_arn": "arn:aws:acm:ap-southeast-1:890942158228:certificate/47805cae-14f6-4091-a434-23d828fd5c22",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [
                  {
                    "content_type": "text/plain",
                    "message_body": "",
                    "status_code": "502"
                  }
                ],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "",
                "type": "fixed-response"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:890942158228:listener/app/selin-tf-alb/d2e71f864e22026b/3e1b1338597b3b23",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:890942158228:loadbalancer/app/selin-tf-alb/d2e71f864e22026b",
            "port": 443,
            "protocol": "HTTPS",
            "ssl_policy": "ELBSecurityPolicy-2016-08",
            "tags": {},
            "tags_all": {
              "CmBillingGroup": "OTHER",
              "CodedResource": "true",
              "Environment": "playground",
              "IaC": "local",
              "Owner": "",
              "Service": "selin-tf"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_caller_identity.current",
            "module.alb_workload_internet_facing.aws_lb.default",
            "module.alb_workload_internet_facing.aws_s3_bucket.alb_access_log",
            "module.vpc_workload.aws_security_group.ec2_bastion",
            "module.vpc_workload.aws_security_group.public_subnet_group",
            "module.vpc_workload.aws_security_group.publish_internet",
            "module.vpc_workload.aws_subnet.public",
            "module.vpc_workload.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.alb_workload_internet_facing",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "port_80",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:890942158228:listener/app/selin-tf-alb/d2e71f864e22026b/5289750552dcefdc",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [
                  {
                    "host": "#{host}",
                    "path": "/#{path}",
                    "port": "443",
                    "protocol": "HTTPS",
                    "query": "#{query}",
                    "status_code": "HTTP_301"
                  }
                ],
                "target_group_arn": "",
                "type": "redirect"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:890942158228:listener/app/selin-tf-alb/d2e71f864e22026b/5289750552dcefdc",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:890942158228:loadbalancer/app/selin-tf-alb/d2e71f864e22026b",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {
              "CmBillingGroup": "OTHER",
              "CodedResource": "true",
              "Environment": "playground",
              "IaC": "local",
              "Owner": "",
              "Service": "selin-tf"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_caller_identity.current",
            "module.alb_workload_internet_facing.aws_lb.default",
            "module.alb_workload_internet_facing.aws_s3_bucket.alb_access_log",
            "module.vpc_workload.aws_security_group.ec2_bastion",
            "module.vpc_workload.aws_security_group.public_subnet_group",
            "module.vpc_workload.aws_security_group.publish_internet",
            "module.vpc_workload.aws_subnet.public",
            "module.vpc_workload.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.fargate_api_service",
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "onlyfw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:890942158228:targetgroup/selin-tf-api/4eee81a0f8c5315d",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:890942158228:listener-rule/app/selin-tf-alb/d2e71f864e22026b/3e1b1338597b3b23/79fb8463eecae2ef",
            "condition": [
              {
                "host_header": [
                  {
                    "values": [
                      "joselin.sre.bizmates.co.jp"
                    ]
                  }
                ],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [],
                "query_string": [],
                "source_ip": []
              },
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/",
                      "/*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:890942158228:listener-rule/app/selin-tf-alb/d2e71f864e22026b/3e1b1338597b3b23/79fb8463eecae2ef",
            "listener_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:890942158228:listener/app/selin-tf-alb/d2e71f864e22026b/3e1b1338597b3b23",
            "priority": 120,
            "tags": {},
            "tags_all": {
              "CmBillingGroup": "OTHER",
              "CodedResource": "true",
              "Environment": "playground",
              "IaC": "local",
              "Owner": "",
              "Service": "selin-tf"
            }
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_caller_identity.current",
            "module.alb_workload_internet_facing.aws_lb.default",
            "module.alb_workload_internet_facing.aws_lb_listener.port_443",
            "module.alb_workload_internet_facing.aws_s3_bucket.alb_access_log",
            "module.fargate_api_service.aws_lb_target_group.default",
            "module.fargate_api_service.aws_lb_target_group.enable_target_blue",
            "module.vpc_workload.aws_security_group.ec2_bastion",
            "module.vpc_workload.aws_security_group.public_subnet_group",
            "module.vpc_workload.aws_security_group.publish_internet",
            "module.vpc_workload.aws_subnet.public",
            "module.vpc_workload.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.fargate_api_service",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:890942158228:targetgroup/selin-tf-api/4eee81a0f8c5315d",
            "arn_suffix": "targetgroup/selin-tf-api/4eee81a0f8c5315d",
            "connection_termination": false,
            "deregistration_delay": "60",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 60,
                "matcher": "200",
                "path": "/",
                "port": "80",
                "protocol": "HTTP",
                "timeout": 30,
                "unhealthy_threshold": 5
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:890942158228:targetgroup/selin-tf-api/4eee81a0f8c5315d",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "selin-tf-api",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags_all": {
              "CmBillingGroup": "OTHER",
              "CodedResource": "true",
              "Environment": "playground",
              "IaC": "local",
              "Service": "selin-tf"
            },
            "target_failover": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-01bf300ba725825a0"
          },
          "dependencies": [
            "module.vpc_workload.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_workload",
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0e2e863819580c71a",
            "arn": "arn:aws:ec2:ap-southeast-1:890942158228:instance/i-02cc43ebbb358cfb5",
            "associate_public_ip_address": false,
            "availability_zone": "ap-southeast-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": true,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "ec2_profile_bastion_instance_selin-tf",
            "id": "i-02cc43ebbb358cfb5",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t4g.nano",
            "ipv6_address_count": 0,
            "key_name": "ec2.instance.selin-tf-bastion.ec2-user.id_rsa.pub",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-067dd10bad13b3052",
            "private_dns": "ip-10-0-40-144.ap-southeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": true,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.40.144",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": true,
                "iops": 3000,
                "kms_key_id": "arn:aws:kms:ap-southeast-1:890942158228:key/1e04161c-fd69-4ea0-82c8-570309012d46",
                "throughput": 125,
                "volume_id": "vol-077838fa82d59eb6b",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": false,
            "subnet_id": "subnet-045e4a4998cd6121d",
            "tags": {
              "AWSBackupTarget": "false",
              "Name": "selin-tf-bastion"
            },
            "tags_all": {
              "AWSBackupTarget": "false",
              "CmBillingGroup": "OTHER",
              "CodedResource": "true",
              "Environment": "playground",
              "IaC": "local",
              "Name": "selin-tf-bastion",
              "Service": "selin-tf"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "volume_tags": {
              "Name": "selin-tf-bastion"
            },
            "vpc_security_group_ids": [
              "sg-02a0f88611930c870",
              "sg-0cf929c3f15e3d6f7"
            ]
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "ami"
              }
            ]
          ],
          "dependencies": [
            "module.vpc_workload.aws_iam_instance_profile.bastion",
            "module.vpc_workload.aws_iam_role.ec2_instance_profile",
            "module.vpc_workload.aws_key_pair.ec2_keypair_bastion",
            "module.vpc_workload.aws_security_group.ec2_bastion",
            "module.vpc_workload.aws_security_group.manage_subnet_group",
            "module.vpc_workload.aws_subnet.manage",
            "module.vpc_workload.aws_vpc.default",
            "module.vpc_workload.data.aws_iam_policy_document.ec2_common_instance_profile",
            "module.vpc_workload.data.aws_ssm_parameter.amzn2_arm_ami",
            "module.vpc_workload.tls_private_key.ec2_keypair_bastion"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_workload",
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2_nat_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0e2e863819580c71a",
            "arn": "arn:aws:ec2:ap-southeast-1:890942158228:instance/i-086c1132991f00169",
            "associate_public_ip_address": true,
            "availability_zone": "ap-southeast-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": true,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "ec2_profile_nat_instance_selin-tf_vpc",
            "id": "i-086c1132991f00169",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t4g.nano",
            "ipv6_address_count": 1,
            "ipv6_addresses": [
              "2406:da18:edd:bc1e:32d6:a969:e8e7:c40b"
            ],
            "key_name": "ec2.instance.selin-tf-nat-instance.0.ec2-user.id_rsa.pub",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-04aa1ac680532b936",
            "private_dns": "ip-10-0-30-19.ap-southeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.30.19",
            "public_dns": "ec2-18-141-159-90.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "18.141.159.90",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": true,
                "iops": 3000,
                "kms_key_id": "arn:aws:kms:ap-southeast-1:890942158228:key/1e04161c-fd69-4ea0-82c8-570309012d46",
                "throughput": 125,
                "volume_id": "vol-057a5486eedf1a553",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": false,
            "subnet_id": "subnet-08f4133e4ffae5217",
            "tags": {
              "AWSBackupTarget": "false",
              "Name": "selin-tf-nat-instance[0]"
            },
            "tags_all": {
              "AWSBackupTarget": "false",
              "CmBillingGroup": "OTHER",
              "CodedResource": "true",
              "Environment": "playground",
              "IaC": "local",
              "Name": "selin-tf-nat-instance[0]",
              "Service": "selin-tf"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "volume_tags": {
              "Name": "selin-tf-nat-instance[0]"
            },
            "vpc_security_group_ids": [
              "sg-0768739ba2a202528",
              "sg-07b65fda086a2d997"
            ]
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "ami"
              }
            ]
          ],
          "dependencies": [
            "module.vpc_workload.aws_iam_instance_profile.ec2_nat_instance",
            "module.vpc_workload.aws_iam_role.ec2_nat_instance",
            "module.vpc_workload.aws_key_pair.ec2_keypair_natinstance",
            "module.vpc_workload.aws_security_group.ec2_bastion",
            "module.vpc_workload.aws_security_group.ec2_nat_instance",
            "module.vpc_workload.aws_security_group.nat_subnet_group",
            "module.vpc_workload.aws_subnet.nat",
            "module.vpc_workload.aws_vpc.default",
            "module.vpc_workload.data.aws_iam_policy_document.ec2_nat_instance",
            "module.vpc_workload.data.aws_ssm_parameter.amzn2_arm_ami",
            "module.vpc_workload.tls_private_key.ec2_keypair_natinstance"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_workload",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:890942158228:internet-gateway/igw-04abb7b5b84113e2b",
            "id": "igw-04abb7b5b84113e2b",
            "owner_id": "890942158228",
            "tags": {
              "Name": "selin-tf-vpc-igw"
            },
            "tags_all": {
              "CmBillingGroup": "OTHER",
              "CodedResource": "true",
              "Environment": "playground",
              "IaC": "local",
              "Name": "selin-tf-vpc-igw",
              "Service": "selin-tf"
            },
            "vpc_id": "vpc-01bf300ba725825a0"
          },
          "dependencies": [
            "module.vpc_workload.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_workload",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "local",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:890942158228:route-table/rtb-0fbaf69b129bea2a9",
            "id": "rtb-0fbaf69b129bea2a9",
            "owner_id": "890942158228",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "selin-tf-internal"
            },
            "tags_all": {
              "CmBillingGroup": "OTHER",
              "CodedResource": "true",
              "Environment": "playground",
              "IaC": "local",
              "Name": "selin-tf-internal",
              "Owner": "",
              "Service": "selin-tf"
            },
            "timeouts": null,
            "vpc_id": "vpc-01bf300ba725825a0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_workload.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_workload",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "manage",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:890942158228:route-table/rtb-09d8604737fcf1b87",
            "id": "rtb-09d8604737fcf1b87",
            "owner_id": "890942158228",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "eni-04aa1ac680532b936",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "selin-tf-manage-route[0]"
            },
            "tags_all": {
              "CmBillingGroup": "OTHER",
              "CodedResource": "true",
              "Environment": "playground",
              "IaC": "local",
              "Name": "selin-tf-manage-route[0]",
              "Owner": "",
              "Service": "selin-tf"
            },
            "timeouts": null,
            "vpc_id": "vpc-01bf300ba725825a0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_workload.aws_eip.natgw_default",
            "module.vpc_workload.aws_iam_instance_profile.ec2_nat_instance",
            "module.vpc_workload.aws_iam_role.ec2_nat_instance",
            "module.vpc_workload.aws_instance.ec2_nat_instance",
            "module.vpc_workload.aws_internet_gateway.default",
            "module.vpc_workload.aws_key_pair.ec2_keypair_natinstance",
            "module.vpc_workload.aws_nat_gateway.default",
            "module.vpc_workload.aws_security_group.ec2_bastion",
            "module.vpc_workload.aws_security_group.ec2_nat_instance",
            "module.vpc_workload.aws_security_group.nat_subnet_group",
            "module.vpc_workload.aws_subnet.nat",
            "module.vpc_workload.aws_vpc.default",
            "module.vpc_workload.data.aws_iam_policy_document.ec2_nat_instance",
            "module.vpc_workload.data.aws_ssm_parameter.amzn2_arm_ami",
            "module.vpc_workload.tls_private_key.ec2_keypair_natinstance"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:890942158228:route-table/rtb-0991f3487fdef321f",
            "id": "rtb-0991f3487fdef321f",
            "owner_id": "890942158228",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "eni-04aa1ac680532b936",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "selin-tf-manage-route[1]"
            },
            "tags_all": {
              "CmBillingGroup": "OTHER",
              "CodedResource": "true",
              "Environment": "playground",
              "IaC": "local",
              "Name": "selin-tf-manage-route[1]",
              "Owner": "",
              "Service": "selin-tf"
            },
            "timeouts": null,
            "vpc_id": "vpc-01bf300ba725825a0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_workload.aws_eip.natgw_default",
            "module.vpc_workload.aws_iam_instance_profile.ec2_nat_instance",
            "module.vpc_workload.aws_iam_role.ec2_nat_instance",
            "module.vpc_workload.aws_instance.ec2_nat_instance",
            "module.vpc_workload.aws_internet_gateway.default",
            "module.vpc_workload.aws_key_pair.ec2_keypair_natinstance",
            "module.vpc_workload.aws_nat_gateway.default",
            "module.vpc_workload.aws_security_group.ec2_bastion",
            "module.vpc_workload.aws_security_group.ec2_nat_instance",
            "module.vpc_workload.aws_security_group.nat_subnet_group",
            "module.vpc_workload.aws_subnet.nat",
            "module.vpc_workload.aws_vpc.default",
            "module.vpc_workload.data.aws_iam_policy_document.ec2_nat_instance",
            "module.vpc_workload.data.aws_ssm_parameter.amzn2_arm_ami",
            "module.vpc_workload.tls_private_key.ec2_keypair_natinstance"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_workload",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:890942158228:route-table/rtb-0a98413636fc3f2e8",
            "id": "rtb-0a98413636fc3f2e8",
            "owner_id": "890942158228",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-04abb7b5b84113e2b",
                "ipv6_cidr_block": "::/0",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-04abb7b5b84113e2b",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "selin-tf-nat"
            },
            "tags_all": {
              "CmBillingGroup": "OTHER",
              "CodedResource": "true",
              "Environment": "playground",
              "IaC": "local",
              "Name": "selin-tf-nat",
              "Owner": "",
              "Service": "selin-tf"
            },
            "timeouts": null,
            "vpc_id": "vpc-01bf300ba725825a0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_workload.aws_internet_gateway.default",
            "module.vpc_workload.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_workload",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:890942158228:route-table/rtb-07e6551ec9a1fff2d",
            "id": "rtb-07e6551ec9a1fff2d",
            "owner_id": "890942158228",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "eni-04aa1ac680532b936",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "selin-tf-private-route[0]"
            },
            "tags_all": {
              "CmBillingGroup": "OTHER",
              "CodedResource": "true",
              "Environment": "playground",
              "IaC": "local",
              "Name": "selin-tf-private-route[0]",
              "Owner": "",
              "Service": "selin-tf"
            },
            "timeouts": null,
            "vpc_id": "vpc-01bf300ba725825a0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_workload.aws_eip.natgw_default",
            "module.vpc_workload.aws_iam_instance_profile.ec2_nat_instance",
            "module.vpc_workload.aws_iam_role.ec2_nat_instance",
            "module.vpc_workload.aws_instance.ec2_nat_instance",
            "module.vpc_workload.aws_internet_gateway.default",
            "module.vpc_workload.aws_key_pair.ec2_keypair_natinstance",
            "module.vpc_workload.aws_nat_gateway.default",
            "module.vpc_workload.aws_security_group.ec2_bastion",
            "module.vpc_workload.aws_security_group.ec2_nat_instance",
            "module.vpc_workload.aws_security_group.nat_subnet_group",
            "module.vpc_workload.aws_subnet.nat",
            "module.vpc_workload.aws_vpc.default",
            "module.vpc_workload.data.aws_iam_policy_document.ec2_nat_instance",
            "module.vpc_workload.data.aws_ssm_parameter.amzn2_arm_ami",
            "module.vpc_workload.tls_private_key.ec2_keypair_natinstance"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:890942158228:route-table/rtb-08564e3616cb76dde",
            "id": "rtb-08564e3616cb76dde",
            "owner_id": "890942158228",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "eni-04aa1ac680532b936",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "selin-tf-private-route[1]"
            },
            "tags_all": {
              "CmBillingGroup": "OTHER",
              "CodedResource": "true",
              "Environment": "playground",
              "IaC": "local",
              "Name": "selin-tf-private-route[1]",
              "Owner": "",
              "Service": "selin-tf"
            },
            "timeouts": null,
            "vpc_id": "vpc-01bf300ba725825a0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_workload.aws_eip.natgw_default",
            "module.vpc_workload.aws_iam_instance_profile.ec2_nat_instance",
            "module.vpc_workload.aws_iam_role.ec2_nat_instance",
            "module.vpc_workload.aws_instance.ec2_nat_instance",
            "module.vpc_workload.aws_internet_gateway.default",
            "module.vpc_workload.aws_key_pair.ec2_keypair_natinstance",
            "module.vpc_workload.aws_nat_gateway.default",
            "module.vpc_workload.aws_security_group.ec2_bastion",
            "module.vpc_workload.aws_security_group.ec2_nat_instance",
            "module.vpc_workload.aws_security_group.nat_subnet_group",
            "module.vpc_workload.aws_subnet.nat",
            "module.vpc_workload.aws_vpc.default",
            "module.vpc_workload.data.aws_iam_policy_document.ec2_nat_instance",
            "module.vpc_workload.data.aws_ssm_parameter.amzn2_arm_ami",
            "module.vpc_workload.tls_private_key.ec2_keypair_natinstance"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_workload",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:890942158228:route-table/rtb-0f1414600f3b93254",
            "id": "rtb-0f1414600f3b93254",
            "owner_id": "890942158228",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-04abb7b5b84113e2b",
                "ipv6_cidr_block": "::/0",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-04abb7b5b84113e2b",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "selin-tf-public"
            },
            "tags_all": {
              "CmBillingGroup": "OTHER",
              "CodedResource": "true",
              "Environment": "playground",
              "IaC": "local",
              "Name": "selin-tf-public",
              "Owner": "",
              "Service": "selin-tf"
            },
            "timeouts": null,
            "vpc_id": "vpc-01bf300ba725825a0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_workload.aws_internet_gateway.default",
            "module.vpc_workload.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_workload",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "tgw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:890942158228:route-table/rtb-0ede8f360cd2070f8",
            "id": "rtb-0ede8f360cd2070f8",
            "owner_id": "890942158228",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "selin-tf-tgw"
            },
            "tags_all": {
              "CmBillingGroup": "OTHER",
              "CodedResource": "true",
              "Environment": "playground",
              "IaC": "local",
              "Name": "selin-tf-tgw",
              "Owner": "",
              "Service": "selin-tf"
            },
            "timeouts": null,
            "vpc_id": "vpc-01bf300ba725825a0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_workload.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_workload",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "local",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03fee8ffe1e9f3f6e",
            "route_table_id": "rtb-0fbaf69b129bea2a9",
            "subnet_id": "subnet-043fc49e65b67a03b"
          },
          "dependencies": [
            "module.vpc_workload.aws_route_table.local",
            "module.vpc_workload.aws_subnet.local",
            "module.vpc_workload.aws_vpc.default"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0775e39caff8b9a28",
            "route_table_id": "rtb-0fbaf69b129bea2a9",
            "subnet_id": "subnet-0175ff1517ecb8b50"
          },
          "dependencies": [
            "module.vpc_workload.aws_route_table.local",
            "module.vpc_workload.aws_subnet.local",
            "module.vpc_workload.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_workload",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "manage",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-017e1c8e406bd7e19",
            "route_table_id": "rtb-09d8604737fcf1b87",
            "subnet_id": "subnet-045e4a4998cd6121d"
          },
          "dependencies": [
            "module.vpc_workload.aws_eip.natgw_default",
            "module.vpc_workload.aws_iam_instance_profile.ec2_nat_instance",
            "module.vpc_workload.aws_iam_role.ec2_nat_instance",
            "module.vpc_workload.aws_instance.ec2_nat_instance",
            "module.vpc_workload.aws_internet_gateway.default",
            "module.vpc_workload.aws_key_pair.ec2_keypair_natinstance",
            "module.vpc_workload.aws_nat_gateway.default",
            "module.vpc_workload.aws_route_table.manage",
            "module.vpc_workload.aws_security_group.ec2_bastion",
            "module.vpc_workload.aws_security_group.ec2_nat_instance",
            "module.vpc_workload.aws_security_group.nat_subnet_group",
            "module.vpc_workload.aws_subnet.manage",
            "module.vpc_workload.aws_subnet.nat",
            "module.vpc_workload.aws_vpc.default",
            "module.vpc_workload.data.aws_iam_policy_document.ec2_nat_instance",
            "module.vpc_workload.data.aws_ssm_parameter.amzn2_arm_ami",
            "module.vpc_workload.tls_private_key.ec2_keypair_natinstance"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-094d7aa639c8dc146",
            "route_table_id": "rtb-0991f3487fdef321f",
            "subnet_id": "subnet-064540b5df14ec4f7"
          },
          "dependencies": [
            "module.vpc_workload.aws_eip.natgw_default",
            "module.vpc_workload.aws_iam_instance_profile.ec2_nat_instance",
            "module.vpc_workload.aws_iam_role.ec2_nat_instance",
            "module.vpc_workload.aws_instance.ec2_nat_instance",
            "module.vpc_workload.aws_internet_gateway.default",
            "module.vpc_workload.aws_key_pair.ec2_keypair_natinstance",
            "module.vpc_workload.aws_nat_gateway.default",
            "module.vpc_workload.aws_route_table.manage",
            "module.vpc_workload.aws_security_group.ec2_bastion",
            "module.vpc_workload.aws_security_group.ec2_nat_instance",
            "module.vpc_workload.aws_security_group.nat_subnet_group",
            "module.vpc_workload.aws_subnet.manage",
            "module.vpc_workload.aws_subnet.nat",
            "module.vpc_workload.aws_vpc.default",
            "module.vpc_workload.data.aws_iam_policy_document.ec2_nat_instance",
            "module.vpc_workload.data.aws_ssm_parameter.amzn2_arm_ami",
            "module.vpc_workload.tls_private_key.ec2_keypair_natinstance"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_workload",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-037a36f6f38c4eb6e",
            "route_table_id": "rtb-0a98413636fc3f2e8",
            "subnet_id": "subnet-08f4133e4ffae5217"
          },
          "dependencies": [
            "module.vpc_workload.aws_internet_gateway.default",
            "module.vpc_workload.aws_route_table.nat",
            "module.vpc_workload.aws_subnet.nat",
            "module.vpc_workload.aws_vpc.default"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00a9ff9e9c1a404ff",
            "route_table_id": "rtb-0a98413636fc3f2e8",
            "subnet_id": "subnet-04891ea89d1b1e2ee"
          },
          "dependencies": [
            "module.vpc_workload.aws_internet_gateway.default",
            "module.vpc_workload.aws_route_table.nat",
            "module.vpc_workload.aws_subnet.nat",
            "module.vpc_workload.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_workload",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cc2f7c4fdccdc0cb",
            "route_table_id": "rtb-07e6551ec9a1fff2d",
            "subnet_id": "subnet-07b2d31c2475b615d"
          },
          "dependencies": [
            "module.vpc_workload.aws_eip.natgw_default",
            "module.vpc_workload.aws_iam_instance_profile.ec2_nat_instance",
            "module.vpc_workload.aws_iam_role.ec2_nat_instance",
            "module.vpc_workload.aws_instance.ec2_nat_instance",
            "module.vpc_workload.aws_internet_gateway.default",
            "module.vpc_workload.aws_key_pair.ec2_keypair_natinstance",
            "module.vpc_workload.aws_nat_gateway.default",
            "module.vpc_workload.aws_route_table.private",
            "module.vpc_workload.aws_security_group.ec2_bastion",
            "module.vpc_workload.aws_security_group.ec2_nat_instance",
            "module.vpc_workload.aws_security_group.nat_subnet_group",
            "module.vpc_workload.aws_subnet.nat",
            "module.vpc_workload.aws_subnet.private",
            "module.vpc_workload.aws_vpc.default",
            "module.vpc_workload.data.aws_iam_policy_document.ec2_nat_instance",
            "module.vpc_workload.data.aws_ssm_parameter.amzn2_arm_ami",
            "module.vpc_workload.tls_private_key.ec2_keypair_natinstance"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d8d12672cc13ce16",
            "route_table_id": "rtb-08564e3616cb76dde",
            "subnet_id": "subnet-04784f90287f8f505"
          },
          "dependencies": [
            "module.vpc_workload.aws_eip.natgw_default",
            "module.vpc_workload.aws_iam_instance_profile.ec2_nat_instance",
            "module.vpc_workload.aws_iam_role.ec2_nat_instance",
            "module.vpc_workload.aws_instance.ec2_nat_instance",
            "module.vpc_workload.aws_internet_gateway.default",
            "module.vpc_workload.aws_key_pair.ec2_keypair_natinstance",
            "module.vpc_workload.aws_nat_gateway.default",
            "module.vpc_workload.aws_route_table.private",
            "module.vpc_workload.aws_security_group.ec2_bastion",
            "module.vpc_workload.aws_security_group.ec2_nat_instance",
            "module.vpc_workload.aws_security_group.nat_subnet_group",
            "module.vpc_workload.aws_subnet.nat",
            "module.vpc_workload.aws_subnet.private",
            "module.vpc_workload.aws_vpc.default",
            "module.vpc_workload.data.aws_iam_policy_document.ec2_nat_instance",
            "module.vpc_workload.data.aws_ssm_parameter.amzn2_arm_ami",
            "module.vpc_workload.tls_private_key.ec2_keypair_natinstance"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_workload",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09c3ce752f03d08fd",
            "route_table_id": "rtb-0f1414600f3b93254",
            "subnet_id": "subnet-08309d02a04101db1"
          },
          "dependencies": [
            "module.vpc_workload.aws_internet_gateway.default",
            "module.vpc_workload.aws_route_table.public",
            "module.vpc_workload.aws_subnet.public",
            "module.vpc_workload.aws_vpc.default"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06ae6e201a11c950c",
            "route_table_id": "rtb-0f1414600f3b93254",
            "subnet_id": "subnet-0db76712a7a1bb426"
          },
          "dependencies": [
            "module.vpc_workload.aws_internet_gateway.default",
            "module.vpc_workload.aws_route_table.public",
            "module.vpc_workload.aws_subnet.public",
            "module.vpc_workload.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_workload",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "tgw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06c858a998ff1a699",
            "route_table_id": "rtb-0ede8f360cd2070f8",
            "subnet_id": "subnet-07c9e0ead85c83ded"
          },
          "dependencies": [
            "module.vpc_workload.aws_route_table.tgw",
            "module.vpc_workload.aws_subnet.tgw",
            "module.vpc_workload.aws_vpc.default"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06ad4e3d8aed06e3b",
            "route_table_id": "rtb-0ede8f360cd2070f8",
            "subnet_id": "subnet-006260efc4159dbbd"
          },
          "dependencies": [
            "module.vpc_workload.aws_route_table.tgw",
            "module.vpc_workload.aws_subnet.tgw",
            "module.vpc_workload.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_workload",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2_bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:890942158228:security-group/sg-0cf929c3f15e3d6f7",
            "description": "Bastion only.",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0cf929c3f15e3d6f7",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/8"
                ],
                "description": "ICMP (For network debugging.)",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              }
            ],
            "name": "selin-tf-ec2-bastion",
            "name_prefix": "",
            "owner_id": "890942158228",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "selin-tf-ec2-bastion"
            },
            "tags_all": {
              "CmBillingGroup": "OTHER",
              "CodedResource": "true",
              "Environment": "playground",
              "IaC": "local",
              "Name": "selin-tf-ec2-bastion",
              "Owner": "",
              "Service": "selin-tf"
            },
            "timeouts": null,
            "vpc_id": "vpc-01bf300ba725825a0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_workload.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_workload",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2_nat_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:890942158228:security-group/sg-07b65fda086a2d997",
            "description": "NAT-Instance only",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07b65fda086a2d997",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "Allow full access from VPC CIDR.",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "selin-tf-ec2-nat-instance",
            "name_prefix": "",
            "owner_id": "890942158228",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "selin-tf-ec2-nat-instance"
            },
            "tags_all": {
              "CmBillingGroup": "OTHER",
              "CodedResource": "true",
              "Environment": "playground",
              "IaC": "local",
              "Name": "selin-tf-ec2-nat-instance",
              "Owner": "",
              "Service": "selin-tf"
            },
            "timeouts": null,
            "vpc_id": "vpc-01bf300ba725825a0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_workload.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_workload",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "http_server_external",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:890942158228:security-group/sg-0aea3e2395b5ab357",
            "description": "Allow HTTP/HTTPS access from public subnet group.",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0aea3e2395b5ab357",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "HTTP access from public subnet group.",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-064925d2cc5d9db10",
                  "sg-0cf929c3f15e3d6f7"
                ],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [],
                "description": "HTTPS access from public subnet group.",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-064925d2cc5d9db10",
                  "sg-0cf929c3f15e3d6f7"
                ],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "selin-tf-http-server-external",
            "name_prefix": "",
            "owner_id": "890942158228",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "selin-tf-http-server-external"
            },
            "tags_all": {
              "CmBillingGroup": "OTHER",
              "CodedResource": "true",
              "Environment": "playground",
              "IaC": "local",
              "Name": "selin-tf-http-server-external",
              "Owner": "",
              "Service": "selin-tf"
            },
            "timeouts": null,
            "vpc_id": "vpc-01bf300ba725825a0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_workload.aws_security_group.ec2_bastion",
            "module.vpc_workload.aws_security_group.public_subnet_group",
            "module.vpc_workload.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_workload",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "http_server_internal",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:890942158228:security-group/sg-0a7f605901f98e9f0",
            "description": "Allow HTTP/HTTPS access from private subnet cidr.",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a7f605901f98e9f0",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/8"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/8"
                ],
                "description": "HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "selin-tf-http-server-internal",
            "name_prefix": "",
            "owner_id": "890942158228",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "selin-tf-http-server-internal"
            },
            "tags_all": {
              "CmBillingGroup": "OTHER",
              "CodedResource": "true",
              "Environment": "playground",
              "IaC": "local",
              "Name": "selin-tf-http-server-internal",
              "Owner": "",
              "Service": "selin-tf"
            },
            "timeouts": null,
            "vpc_id": "vpc-01bf300ba725825a0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_workload.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_workload",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "internal_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:890942158228:security-group/sg-0ae61323a8420a7d2",
            "description": "Resources with no external communication in private subnet.",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ae61323a8420a7d2",
            "ingress": [],
            "name": "selin-tf-internal-server",
            "name_prefix": "",
            "owner_id": "890942158228",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "selin-tf-internal-server"
            },
            "tags_all": {
              "CmBillingGroup": "OTHER",
              "CodedResource": "true",
              "Environment": "playground",
              "IaC": "local",
              "Name": "selin-tf-internal-server",
              "Owner": "",
              "Service": "selin-tf"
            },
            "timeouts": null,
            "vpc_id": "vpc-01bf300ba725825a0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_workload.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_workload",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "internal_subnet_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:890942158228:security-group/sg-06abc916fbdcbb428",
            "description": "Internal subnet resource group.",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06abc916fbdcbb428",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Communication between nodes in a subnet",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              },
              {
                "cidr_blocks": [],
                "description": "ICMP from Bastion",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [
                  "sg-0cf929c3f15e3d6f7"
                ],
                "self": false,
                "to_port": -1
              }
            ],
            "name": "selin-tf-internal-subnet-group",
            "name_prefix": "",
            "owner_id": "890942158228",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "selin-tf-internal-subnet-group"
            },
            "tags_all": {
              "CmBillingGroup": "OTHER",
              "CodedResource": "true",
              "Environment": "playground",
              "IaC": "local",
              "Name": "selin-tf-internal-subnet-group",
              "Owner": "",
              "Service": "selin-tf"
            },
            "timeouts": null,
            "vpc_id": "vpc-01bf300ba725825a0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_workload.aws_security_group.ec2_bastion",
            "module.vpc_workload.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_workload",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "manage_subnet_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:890942158228:security-group/sg-02a0f88611930c870",
            "description": "Manage subnet resource group.",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02a0f88611930c870",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Communication between nodes in a subnet",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              },
              {
                "cidr_blocks": [],
                "description": "ICMP from Bastion",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [
                  "sg-0cf929c3f15e3d6f7"
                ],
                "self": false,
                "to_port": -1
              }
            ],
            "name": "selin-tf-manage-subnet-group",
            "name_prefix": "",
            "owner_id": "890942158228",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "selin-tf-manage-subnet-group"
            },
            "tags_all": {
              "CmBillingGroup": "OTHER",
              "CodedResource": "true",
              "Environment": "playground",
              "IaC": "local",
              "Name": "selin-tf-manage-subnet-group",
              "Owner": "",
              "Service": "selin-tf"
            },
            "timeouts": null,
            "vpc_id": "vpc-01bf300ba725825a0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_workload.aws_security_group.ec2_bastion",
            "module.vpc_workload.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_workload",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "mysql_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:890942158228:security-group/sg-097a7a346652fa10a",
            "description": "Allow MySQL access from private subnet group.",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-097a7a346652fa10a",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "MySQL",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-051389d615f65eda1",
                  "sg-0cf929c3f15e3d6f7"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "selin-tf-mysql-server",
            "name_prefix": "",
            "owner_id": "890942158228",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "selin-tf-mysql-server"
            },
            "tags_all": {
              "CmBillingGroup": "OTHER",
              "CodedResource": "true",
              "Environment": "playground",
              "IaC": "local",
              "Name": "selin-tf-mysql-server",
              "Owner": "",
              "Service": "selin-tf"
            },
            "timeouts": null,
            "vpc_id": "vpc-01bf300ba725825a0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_workload.aws_security_group.ec2_bastion",
            "module.vpc_workload.aws_security_group.private_subnet_group",
            "module.vpc_workload.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_workload",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "nat_subnet_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:890942158228:security-group/sg-0768739ba2a202528",
            "description": "NAT subnet resource group.",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0768739ba2a202528",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "ICMP from Bastion",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [
                  "sg-0cf929c3f15e3d6f7"
                ],
                "self": false,
                "to_port": -1
              }
            ],
            "name": "selin-tf-nat-subnet-group",
            "name_prefix": "",
            "owner_id": "890942158228",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "selin-tf-nat-subnet-group"
            },
            "tags_all": {
              "CmBillingGroup": "OTHER",
              "CodedResource": "true",
              "Environment": "playground",
              "IaC": "local",
              "Name": "selin-tf-nat-subnet-group",
              "Owner": "",
              "Service": "selin-tf"
            },
            "timeouts": null,
            "vpc_id": "vpc-01bf300ba725825a0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_workload.aws_security_group.ec2_bastion",
            "module.vpc_workload.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_workload",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "nfs_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:890942158228:security-group/sg-06bd228055fe26a9a",
            "description": "Allow NFS access from private subnet group.",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06bd228055fe26a9a",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "NFS",
                "from_port": 2049,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-051389d615f65eda1",
                  "sg-0cf929c3f15e3d6f7"
                ],
                "self": false,
                "to_port": 2049
              }
            ],
            "name": "selin-tf-nfs-server",
            "name_prefix": "",
            "owner_id": "890942158228",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "selin-tf-nfs-server"
            },
            "tags_all": {
              "CmBillingGroup": "OTHER",
              "CodedResource": "true",
              "Environment": "playground",
              "IaC": "local",
              "Name": "selin-tf-nfs-server",
              "Owner": "",
              "Service": "selin-tf"
            },
            "timeouts": null,
            "vpc_id": "vpc-01bf300ba725825a0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_workload.aws_security_group.ec2_bastion",
            "module.vpc_workload.aws_security_group.private_subnet_group",
            "module.vpc_workload.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_workload",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "private_subnet_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:890942158228:security-group/sg-051389d615f65eda1",
            "description": "Private subnet resource group.",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-051389d615f65eda1",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Communication between nodes in a subnet",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              },
              {
                "cidr_blocks": [],
                "description": "ICMP from Bastion",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [
                  "sg-0cf929c3f15e3d6f7"
                ],
                "self": false,
                "to_port": -1
              }
            ],
            "name": "selin-tf-private-subnet-group",
            "name_prefix": "",
            "owner_id": "890942158228",
            "revoke_rules_on_delete": true,
            "tags": {
              "Name": "selin-tf-private-subnet-group"
            },
            "tags_all": {
              "CmBillingGroup": "OTHER",
              "CodedResource": "true",
              "Environment": "playground",
              "IaC": "local",
              "Name": "selin-tf-private-subnet-group",
              "Owner": "",
              "Service": "selin-tf"
            },
            "timeouts": null,
            "vpc_id": "vpc-01bf300ba725825a0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_workload.aws_security_group.ec2_bastion",
            "module.vpc_workload.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_workload",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "public_subnet_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:890942158228:security-group/sg-064925d2cc5d9db10",
            "description": "Public subnet resource group.",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-064925d2cc5d9db10",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "ICMP from Bastion",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [
                  "sg-0cf929c3f15e3d6f7"
                ],
                "self": false,
                "to_port": -1
              }
            ],
            "name": "selin-tf-public-subnet-group",
            "name_prefix": "",
            "owner_id": "890942158228",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "selin-tf-public-subnet-group"
            },
            "tags_all": {
              "CmBillingGroup": "OTHER",
              "CodedResource": "true",
              "Environment": "playground",
              "IaC": "local",
              "Name": "selin-tf-public-subnet-group",
              "Owner": "",
              "Service": "selin-tf"
            },
            "timeouts": null,
            "vpc_id": "vpc-01bf300ba725825a0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_workload.aws_security_group.ec2_bastion",
            "module.vpc_workload.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_workload",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "publish_internet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:890942158228:security-group/sg-076f38df9f846e692",
            "description": "Allow public access.(ALB, Internet facing Instance)",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-076f38df9f846e692",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP Public access",
                "from_port": 80,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS Public access",
                "from_port": 443,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "selin-tf-publish-internet",
            "name_prefix": "",
            "owner_id": "890942158228",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "selin-tf-publish-internet"
            },
            "tags_all": {
              "CmBillingGroup": "OTHER",
              "CodedResource": "true",
              "Environment": "playground",
              "IaC": "local",
              "Name": "selin-tf-publish-internet",
              "Owner": "",
              "Service": "selin-tf"
            },
            "timeouts": null,
            "vpc_id": "vpc-01bf300ba725825a0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_workload.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_workload",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "publish_internet_with_test_port",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:890942158228:security-group/sg-0535ee3bcbacb9640",
            "description": "Allow public access.(Blue/Green ALB)",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0535ee3bcbacb9640",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP Public access",
                "from_port": 80,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS Public access (Test port)",
                "from_port": 50443,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 50443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS Public access",
                "from_port": 443,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "selin-tf-publish-internet-with-test-port",
            "name_prefix": "",
            "owner_id": "890942158228",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "selin-tf-publish-internet-with-test-port"
            },
            "tags_all": {
              "CmBillingGroup": "OTHER",
              "CodedResource": "true",
              "Environment": "playground",
              "IaC": "local",
              "Name": "selin-tf-publish-internet-with-test-port",
              "Owner": "",
              "Service": "selin-tf"
            },
            "timeouts": null,
            "vpc_id": "vpc-01bf300ba725825a0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_workload.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_workload",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "local",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:890942158228:subnet/subnet-043fc49e65b67a03b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.0.20.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": true,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-043fc49e65b67a03b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "890942158228",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "selin-tf-internal[0]"
            },
            "tags_all": {
              "CmBillingGroup": "OTHER",
              "CodedResource": "true",
              "Environment": "playground",
              "IaC": "local",
              "Name": "selin-tf-internal[0]",
              "Service": "selin-tf"
            },
            "vpc_id": "vpc-01bf300ba725825a0"
          },
          "dependencies": [
            "module.vpc_workload.aws_vpc.default"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:890942158228:subnet/subnet-0175ff1517ecb8b50",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1c",
            "availability_zone_id": "apse1-az3",
            "cidr_block": "10.0.21.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": true,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0175ff1517ecb8b50",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "890942158228",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "selin-tf-internal[1]"
            },
            "tags_all": {
              "CmBillingGroup": "OTHER",
              "CodedResource": "true",
              "Environment": "playground",
              "IaC": "local",
              "Name": "selin-tf-internal[1]",
              "Service": "selin-tf"
            },
            "vpc_id": "vpc-01bf300ba725825a0"
          },
          "dependencies": [
            "module.vpc_workload.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_workload",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "manage",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:890942158228:subnet/subnet-045e4a4998cd6121d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.0.40.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": true,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-045e4a4998cd6121d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "890942158228",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "selin-tf-manage[0]"
            },
            "tags_all": {
              "CmBillingGroup": "OTHER",
              "CodedResource": "true",
              "Environment": "playground",
              "IaC": "local",
              "Name": "selin-tf-manage[0]",
              "Service": "selin-tf"
            },
            "vpc_id": "vpc-01bf300ba725825a0"
          },
          "dependencies": [
            "module.vpc_workload.aws_vpc.default"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:890942158228:subnet/subnet-064540b5df14ec4f7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1c",
            "availability_zone_id": "apse1-az3",
            "cidr_block": "10.0.41.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": true,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-064540b5df14ec4f7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "890942158228",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "selin-tf-manage[1]"
            },
            "tags_all": {
              "CmBillingGroup": "OTHER",
              "CodedResource": "true",
              "Environment": "playground",
              "IaC": "local",
              "Name": "selin-tf-manage[1]",
              "Service": "selin-tf"
            },
            "vpc_id": "vpc-01bf300ba725825a0"
          },
          "dependencies": [
            "module.vpc_workload.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_workload",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:890942158228:subnet/subnet-08f4133e4ffae5217",
            "assign_ipv6_address_on_creation": true,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.0.30.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08f4133e4ffae5217",
            "ipv6_cidr_block": "2406:da18:edd:bc1e::/64",
            "ipv6_cidr_block_association_id": "subnet-cidr-assoc-0a08e863b5d4100c8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "890942158228",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "selin-tf-nat[0]"
            },
            "tags_all": {
              "CmBillingGroup": "OTHER",
              "CodedResource": "true",
              "Environment": "playground",
              "IaC": "local",
              "Name": "selin-tf-nat[0]",
              "Service": "selin-tf"
            },
            "vpc_id": "vpc-01bf300ba725825a0"
          },
          "dependencies": [
            "module.vpc_workload.aws_vpc.default"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:890942158228:subnet/subnet-04891ea89d1b1e2ee",
            "assign_ipv6_address_on_creation": true,
            "availability_zone": "ap-southeast-1c",
            "availability_zone_id": "apse1-az3",
            "cidr_block": "10.0.31.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04891ea89d1b1e2ee",
            "ipv6_cidr_block": "2406:da18:edd:bc1f::/64",
            "ipv6_cidr_block_association_id": "subnet-cidr-assoc-0746e616118a33687",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "890942158228",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "selin-tf-nat[1]"
            },
            "tags_all": {
              "CmBillingGroup": "OTHER",
              "CodedResource": "true",
              "Environment": "playground",
              "IaC": "local",
              "Name": "selin-tf-nat[1]",
              "Service": "selin-tf"
            },
            "vpc_id": "vpc-01bf300ba725825a0"
          },
          "dependencies": [
            "module.vpc_workload.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_workload",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:890942158228:subnet/subnet-07b2d31c2475b615d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": true,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07b2d31c2475b615d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "890942158228",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "selin-tf-private[0]"
            },
            "tags_all": {
              "CmBillingGroup": "OTHER",
              "CodedResource": "true",
              "Environment": "playground",
              "IaC": "local",
              "Name": "selin-tf-private[0]",
              "Service": "selin-tf"
            },
            "vpc_id": "vpc-01bf300ba725825a0"
          },
          "dependencies": [
            "module.vpc_workload.aws_vpc.default"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:890942158228:subnet/subnet-04784f90287f8f505",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1c",
            "availability_zone_id": "apse1-az3",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": true,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04784f90287f8f505",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "890942158228",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "selin-tf-private[1]"
            },
            "tags_all": {
              "CmBillingGroup": "OTHER",
              "CodedResource": "true",
              "Environment": "playground",
              "IaC": "local",
              "Name": "selin-tf-private[1]",
              "Service": "selin-tf"
            },
            "vpc_id": "vpc-01bf300ba725825a0"
          },
          "dependencies": [
            "module.vpc_workload.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_workload",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:890942158228:subnet/subnet-08309d02a04101db1",
            "assign_ipv6_address_on_creation": true,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08309d02a04101db1",
            "ipv6_cidr_block": "2406:da18:edd:bc00::/64",
            "ipv6_cidr_block_association_id": "subnet-cidr-assoc-0f1c0d3cec6dd0809",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "890942158228",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "selin-tf-public[0]"
            },
            "tags_all": {
              "CmBillingGroup": "OTHER",
              "CodedResource": "true",
              "Environment": "playground",
              "IaC": "local",
              "Name": "selin-tf-public[0]",
              "Service": "selin-tf"
            },
            "vpc_id": "vpc-01bf300ba725825a0"
          },
          "dependencies": [
            "module.vpc_workload.aws_vpc.default"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:890942158228:subnet/subnet-0db76712a7a1bb426",
            "assign_ipv6_address_on_creation": true,
            "availability_zone": "ap-southeast-1c",
            "availability_zone_id": "apse1-az3",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0db76712a7a1bb426",
            "ipv6_cidr_block": "2406:da18:edd:bc01::/64",
            "ipv6_cidr_block_association_id": "subnet-cidr-assoc-01138d47a22050fcc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "890942158228",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "selin-tf-public[1]"
            },
            "tags_all": {
              "CmBillingGroup": "OTHER",
              "CodedResource": "true",
              "Environment": "playground",
              "IaC": "local",
              "Name": "selin-tf-public[1]",
              "Service": "selin-tf"
            },
            "vpc_id": "vpc-01bf300ba725825a0"
          },
          "dependencies": [
            "module.vpc_workload.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_workload",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "tgw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:890942158228:subnet/subnet-07c9e0ead85c83ded",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.0.50.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07c9e0ead85c83ded",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "890942158228",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "selin-tf-tgw[0]"
            },
            "tags_all": {
              "CmBillingGroup": "OTHER",
              "CodedResource": "true",
              "Environment": "playground",
              "IaC": "local",
              "Name": "selin-tf-tgw[0]",
              "Service": "selin-tf"
            },
            "vpc_id": "vpc-01bf300ba725825a0"
          },
          "dependencies": [
            "module.vpc_workload.aws_vpc.default"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:890942158228:subnet/subnet-006260efc4159dbbd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1c",
            "availability_zone_id": "apse1-az3",
            "cidr_block": "10.0.51.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-006260efc4159dbbd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "890942158228",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "selin-tf-tgw[1]"
            },
            "tags_all": {
              "CmBillingGroup": "OTHER",
              "CodedResource": "true",
              "Environment": "playground",
              "IaC": "local",
              "Name": "selin-tf-tgw[1]",
              "Service": "selin-tf"
            },
            "vpc_id": "vpc-01bf300ba725825a0"
          },
          "dependencies": [
            "module.vpc_workload.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_workload",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:890942158228:vpc/vpc-01bf300ba725825a0",
            "assign_generated_ipv6_cidr_block": true,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0cecb1ac1059daf0e",
            "default_route_table_id": "rtb-07a1b2777d5cb4182",
            "default_security_group_id": "sg-047f715862bae607c",
            "dhcp_options_id": "dopt-bc6f9dda",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-01bf300ba725825a0",
            "instance_tenancy": "default",
            "ipv6_association_id": "vpc-cidr-assoc-03df60254f565e499",
            "ipv6_cidr_block": "2406:da18:edd:bc00::/56",
            "ipv6_cidr_block_network_border_group": "ap-southeast-1",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-07a1b2777d5cb4182",
            "owner_id": "890942158228",
            "tags": {
              "Name": "selin-tf-vpc"
            },
            "tags_all": {
              "CmBillingGroup": "OTHER",
              "CodedResource": "true",
              "Environment": "playground",
              "IaC": "local",
              "Name": "selin-tf-vpc",
              "Service": "selin-tf"
            }
          }
        }
      ]
    },
    {
      "module": "module.vpc_workload",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "dynamodb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:890942158228:vpc-endpoint/vpce-0ace4cf02ad1ba009",
            "cidr_blocks": [
              "35.71.118.0/25",
              "52.94.11.0/24",
              "35.71.118.128/26"
            ],
            "id": "vpce-0ace4cf02ad1ba009",
            "owner_id": "890942158228",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-67a5400e",
            "private_dns_enabled": false,
            "requester_managed": false,
            "route_table_ids": [
              "rtb-07e6551ec9a1fff2d",
              "rtb-08564e3616cb76dde",
              "rtb-0fbaf69b129bea2a9"
            ],
            "service_name": "com.amazonaws.ap-southeast-1.dynamodb",
            "state": "available",
            "tags_all": {
              "CmBillingGroup": "OTHER",
              "CodedResource": "true",
              "Environment": "playground",
              "IaC": "local",
              "Service": "selin-tf"
            },
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-01bf300ba725825a0"
          },
          "dependencies": [
            "module.vpc_workload.aws_eip.natgw_default",
            "module.vpc_workload.aws_iam_instance_profile.ec2_nat_instance",
            "module.vpc_workload.aws_iam_role.ec2_nat_instance",
            "module.vpc_workload.aws_instance.ec2_nat_instance",
            "module.vpc_workload.aws_internet_gateway.default",
            "module.vpc_workload.aws_key_pair.ec2_keypair_natinstance",
            "module.vpc_workload.aws_nat_gateway.default",
            "module.vpc_workload.aws_route_table.local",
            "module.vpc_workload.aws_route_table.private",
            "module.vpc_workload.aws_security_group.ec2_bastion",
            "module.vpc_workload.aws_security_group.ec2_nat_instance",
            "module.vpc_workload.aws_security_group.nat_subnet_group",
            "module.vpc_workload.aws_subnet.nat",
            "module.vpc_workload.aws_vpc.default",
            "module.vpc_workload.data.aws_iam_policy_document.ec2_nat_instance",
            "module.vpc_workload.data.aws_region.current",
            "module.vpc_workload.data.aws_ssm_parameter.amzn2_arm_ami",
            "module.vpc_workload.tls_private_key.ec2_keypair_natinstance"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_workload",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "s3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:890942158228:vpc-endpoint/vpce-0a127f47de108c4ac",
            "cidr_blocks": [
              "52.219.32.0/21",
              "3.5.146.0/23",
              "18.34.248.0/22",
              "3.5.148.0/22",
              "18.34.64.0/21",
              "52.219.40.0/22",
              "52.219.124.0/22",
              "52.219.128.0/21",
              "52.219.184.0/21",
              "16.12.48.0/21",
              "52.219.164.0/22",
              "52.219.180.0/22"
            ],
            "id": "vpce-0a127f47de108c4ac",
            "owner_id": "890942158228",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-6fa54006",
            "private_dns_enabled": false,
            "requester_managed": false,
            "route_table_ids": [
              "rtb-07e6551ec9a1fff2d",
              "rtb-08564e3616cb76dde",
              "rtb-0fbaf69b129bea2a9"
            ],
            "service_name": "com.amazonaws.ap-southeast-1.s3",
            "state": "available",
            "tags_all": {
              "CmBillingGroup": "OTHER",
              "CodedResource": "true",
              "Environment": "playground",
              "IaC": "local",
              "Service": "selin-tf"
            },
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-01bf300ba725825a0"
          },
          "dependencies": [
            "module.vpc_workload.aws_eip.natgw_default",
            "module.vpc_workload.aws_iam_instance_profile.ec2_nat_instance",
            "module.vpc_workload.aws_iam_role.ec2_nat_instance",
            "module.vpc_workload.aws_instance.ec2_nat_instance",
            "module.vpc_workload.aws_internet_gateway.default",
            "module.vpc_workload.aws_key_pair.ec2_keypair_natinstance",
            "module.vpc_workload.aws_nat_gateway.default",
            "module.vpc_workload.aws_route_table.local",
            "module.vpc_workload.aws_route_table.private",
            "module.vpc_workload.aws_security_group.ec2_bastion",
            "module.vpc_workload.aws_security_group.ec2_nat_instance",
            "module.vpc_workload.aws_security_group.nat_subnet_group",
            "module.vpc_workload.aws_subnet.nat",
            "module.vpc_workload.aws_vpc.default",
            "module.vpc_workload.data.aws_iam_policy_document.ec2_nat_instance",
            "module.vpc_workload.data.aws_region.current",
            "module.vpc_workload.data.aws_ssm_parameter.amzn2_arm_ami",
            "module.vpc_workload.tls_private_key.ec2_keypair_natinstance"
          ]
        }
      ]
    }
  ]
}